--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,19 @@
-<h1>funziona!</h1>
-<h4>apiurl: {{apiUrl}}</h4>
+<div class="app-container">
+  @if (showNav) {
+    <header class="header bg-light border-bottom">
+      questa è la navbar!!!
+    </header>
+  }
+  <main class="main">
+    <router-outlet/>
+  </main>
+  @if (showNav) {
+    <footer class="bg-light text-center py-2 mt-auto border-top">
+      <div class="container">
+        <small>
+          &copy; 2025 <a href="https://github.com/vittodevit" target="_blank">Vittorio Lo Mele</a>
+        </small>
+      </div>
+    </footer>
+  }
+</div>
