--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,33 @@
-<div class="app-container">
+<div class="d-flex flex-column overflow-x-hidden h-100">
   @if (showNav) {
-    <header class="header bg-light border-bottom">
-      questa è la navbar!!!
-    </header>
+    <app-header/>
   }
-  <main class="main">
-    <router-outlet/>
+  <main class="h-100 flex-grow-1">
+    <div class="row h-100">
+      @if (showNav && showSidebar) {
+        <div class="col-auto border-end min-width ms12">
+          <div class="d-flex flex-column">
+            <ul class="nav nav-pills flex-column mb-auto">
+              <app-nav-item [icon]="HomeIcon" text="Dashboard" [active]="true"/>
+              <app-nav-item [icon]="KeyIcon" text="Cambia password" [active]="false"/>
+
+              <h6 class="mt-3 mb-1 ms-2 text-secondary text-uppercase sidebar-heading">
+                I tuoi link
+                <lucide-angular [img]="PlusCircleIcon" size="16" class="my-auto d-block hov-cur"/>
+              </h6>
+
+              <app-nav-item [icon]="LinkIcon" text="prova2" [active]="false"/>
+            </ul>
+          </div>
+        </div>
+      }
+      <div class="col">
+        <router-outlet/>
+      </div>
+    </div>
   </main>
   @if (showNav) {
-    <footer class="bg-light text-center py-2 mt-auto border-top">
+    <footer class="bg-body text-center py-2 mt-auto border-top mb-1">
       <div class="container">
         <small>
           &copy; 2025 <a href="https://github.com/vittodevit" target="_blank">Vittorio Lo Mele</a>
