--- a/src/app/components/nav-item/nav-item.html
+++ b/src/app/components/nav-item/nav-item.html
@@ -1,6 +1,6 @@
 <li class="nav-item">
   <a
-    href="#"
+    [routerLink]="link"
     [class]="`nav-link ${active ? 'active' : 'link-body-emphasis'} d-flex flex-row gap-2`"
   >
     <lucide-angular [img]="icon" size="16"></lucide-angular>
