--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,184 @@ Impostazione font corretti per notifica snackbar e tooltip
 .mat-mdc-button {
   font-family: var(--bs-btn-font-family), sans-serif !important;
 }
+
+/*
+Override stili per i componenti PrimeNG DatePicker
+*/
+
+.p-inputtext {
+  padding-top: 7px !important;
+  padding-bottom: 7px !important;
+  background: var(--bs-body-bg) !important;
+  color: var(--bs-body-color) !important;
+  border-color: var(--bs-border-color) !important;
+  max-width: 125px !important;
+}
+
+.p-datepicker-dropdown{
+  background: var(--bs-tertiary-bg) !important;
+  color: var(--bs-body-color) !important;
+  border-color: var(--bs-border-color) !important;
+}
+
+.p-datepicker-panel {
+  background: var(--bs-body-bg) !important;
+  color: var(--bs-body-color) !important;
+  border-color: var(--bs-border-color) !important;
+  z-index: 1000 !important;
+}
+
+.p-datepicker-select-month{
+  color: var(--bs-body-color) !important;
+  border: 1px solid var(--bs-border-color) !important;
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+
+.p-datepicker-select-year {
+  color: var(--bs-body-color) !important;
+  border: 1px solid var(--bs-border-color) !important;
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+
+.p-datepicker-select-month:hover{
+  background: var(--bs-secondary-bg) !important;
+}
+
+.p-datepicker-select-year:hover {
+  background: var(--bs-secondary-bg) !important;
+}
+
+.p-datepicker-day {
+  color: var(--bs-body-color) !important;
+}
+
+.p-datepicker-year {
+  color: var(--bs-body-color) !important;
+}
+
+.p-datepicker-year-selected {
+  background: var(--bs-primary) !important;
+  color: #ddd !important;
+}
+
+.p-datepicker-year:hover {
+  background: var(--bs-secondary-bg) !important;
+}
+
+.p-datepicker-day:hover {
+  background: var(--bs-secondary-bg) !important;
+}
+
+.p-datepicker-month {
+  color: var(--bs-body-color) !important;
+}
+
+.p-datepicker-month:hover {
+  background: var(--bs-secondary-bg) !important;
+}
+
+.p-datepicker-other-month {
+  color: var(--bs-secondary-color) !important;
+}
+
+.p-datepicker-weekday {
+  color: var(--bs-secondary-color) !important;
+}
+
+.p-datepicker-header {
+  background: var(--bs-body-bg) !important;
+  color: var(--bs-body-color) !important;
+  border: var(--bs-border-color) !important;
+  padding-bottom: 0 !important;
+}
+
+.p-datepicker-today > .p-datepicker-day {
+  background: var(--bs-secondary-bg) !important;
+  color: var(--bs-body-color) !important;
+}
+
+.p-datepicker-day-selected {
+  background: var(--bs-primary) !important;
+  color: #ddd !important;
+}
+
+.p-button-text{
+  color: var(--bs-body-color) !important;
+}
+
+.p-button-text:hover{
+  background: var(--bs-secondary-bg) !important;
+}
+
+.button-icon-only {
+  padding: 4px 8px !important;
+}
+
+.p-paginator-current {
+  color: var(--bs-body-color) !important;
+  padding-right: 10px !important;;
+}
+
+.p-select{
+  background: var(--bs-body-bg) !important;
+  border-color: var(--bs-border-color) !important;
+  margin-left: 10px !important;
+}
+
+.p-select-label{
+  color: var(--bs-body-color) !important;
+  padding-top: 7px !important;
+  padding-bottom: 7px !important;
+}
+
+.p-paginator-page.p-paginator-page-selected {
+  background: var(--bs-primary) !important;
+  color: #ddd !important;
+}
+
+.p-paginator button{
+  background-color: var(--bs-body-bg) !important;
+  color: var(--bs-body-color) !important;
+}
+
+.p-paginator button:hover{
+  background-color: var(--bs-secondary-bg) !important;
+}
+
+/*
+  Stile per tutte le tabelle
+*/
+
+td{
+  background-color: var(--bs-body-bg) !important;
+  border-color: var(--bs-border-color) !important;
+  color: var(--bs-body-color) !important;
+}
+
+th {
+  background-color: var(--bs-tertiary-bg) !important;
+  border-color: var(--bs-border-color) !important;
+  color: var(--bs-body-color) !important;
+}
+
+.p-paginator {
+  background-color: var(--bs-body-bg) !important;
+  border: 1px solid var(--bs-border-color) !important;
+  margin-top: .5rem !important;
+}
+
+.p-datatable-table-container {
+  background-color: var(--bs-body-bg) !important;
+  border-radius: 6px !important;
+}
+
+table, thead, tr {
+  border-radius: 6px !important;
+}
+
+.shortlink-details-title {
+  text-decoration: underline;
+  cursor: pointer;
+}
