--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -5,6 +5,13 @@
       <h1 class="h5 mb-0">Accorcia.it - Dashboard</h1>
     </div>
     <div class="d-flex flex-row">
+      <button
+        class="btn btn-outline-secondary btn-sm me-3 button-icon-only"
+        style="padding-bottom: 10px; box-sizing: initial;"
+        (click)="themeSwitch()"
+      >
+        <lucide-angular [img]="SunMoonIcon" size="20"/>
+      </button>
       <img src="{{profilePictureUrl}}" alt="Profile Picture" class="rounded-circle me-2" height="32" width="32">
       <a class="alert-link ms-1 mt-auto mb-auto" (click)="logout()" href="#">Logout ({{ username }})</a>
     </div>
