--- a/src/app/components/input-field/input-field.html
+++ b/src/app/components/input-field/input-field.html
@@ -1,3 +1,6 @@
+<label [for]="name" class="special-label" *ngIf="label !== ''">
+  {{ label }}
+</label>
 <div class="input-group">
   <span class="input-group-text">
     <lucide-angular [img]="icon" size="18"></lucide-angular>
@@ -6,6 +9,7 @@
     [type]="type"
     class="form-control"
     [name]="name"
+    [id]="name"
     [placeholder]="placeholder"
     [required]="required"
     [disabled]="disabled"
